PM-1351: Fix css border on IE

--- a/document-matrix/src/styles/groups.scss
+++ b/document-matrix/src/styles/groups.scss
@@ -17,7 +17,7 @@
         }
 
         .rotate {
-            border: none;
+            border-right: none;
             height: 140px;
             white-space: nowrap;
             vertical-align: middle;
